# wg21_lorros_clang_uneval_proposal_implementation

./: LICENSE
clangtv/: 1.cpp  Example.cpp  main.cpp  new.cpp  orig.cpp
uneval/: CMakeLists.txt  CMakeLists.txt.old
uneval/example/: test.cpp  test.cpp.orig  test_cpass.cpp  test_cpass.cpp.orig  test_cpass.cpp.orig1  test_cpass.cpp.orig2  test_cpass.cpp.orig3  test_cpass.cpp.orig4  test_either.cpp
uneval/src/: CMakeLists.txt  CMakeLists.txt.old  UnevalModule.cpp  UnevaluatedAliasToLambdaCheck.cpp  UnevaluatedAliasToLambdaCheck.cpp.cpan.nonrecursive  UnevaluatedAliasToLambdaCheck.h
